# ai-model-manager-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  VISUAL_ARCHITECTURE.md  pyproject.toml  requirements.txt  setup.sh
config/: models.json
examples/: basic_usage.py
src/: __init__.py  server.py
src/models/: __init__.py  base.py
src/providers/: __init__.py  anthropic.py  google.py  mistral.py  ollama.py  openai.py
src/storage/: __init__.py  config.py  database.py
tests/: test_server.py
